--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,37 +1,45 @@
-name: Full CI/CD Pipeline for CarLot-Manager
+name: CarLot-Manager CI/CD Pipeline
 
 on:
   push:
     branches:
       - main
 
-jobs:
-  deploy:
-    runs-on: ubuntu-latest
-    env:
-      DOCKER_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-      DOCKER_PASSWORD: ${{ secrets.DOCKERHUB_TOKEN }}
-      KUBECONFIG_CONTENT: ${{ secrets.KUBECONFIG_CONTENT }}
+env:
+  DOCKER_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+  DOCKER_PASSWORD: ${{ secrets.DOCKERHUB_TOKEN }}
+  KUBECONFIG_CONTENT: ${{ secrets.KUBECONFIG_CONTENT }}
 
+jobs:
+  # 1️⃣ Building and pushing the container to Docker Hub
+  docker:
+    name: Build & Push Docker
+    runs-on: ubuntu-latest
     steps:
-      # 1️⃣ Checkout repository
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # 2️⃣ Build & push Docker image
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{ env.DOCKER_USERNAME }}
+          password: ${{ env.DOCKER_PASSWORD }}
 
       - name: Build Docker image
         run: |
-          IMAGE_NAME="${{ secrets.DOCKER_USERNAME }}/carlot-app:latest"
+          IMAGE_NAME="${{ env.DOCKER_USERNAME }}/carlot-app:latest"
           docker build -t $IMAGE_NAME ./docker
           docker push $IMAGE_NAME
 
-      # 3️⃣ Install Terraform
+  # 2️⃣ Running Terraform to provision infrastructure
+  terraform:
+    name: Terraform Provisioning
+    runs-on: ubuntu-latest
+    needs: docker
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
         with:
@@ -43,7 +51,15 @@ jobs:
           terraform init
           terraform apply -auto-approve
 
-      # 4️⃣ Install Ansible
+  # 3️⃣ Running Ansible to configure the systems
+  ansible:
+    name: Ansible Configuration
+    runs-on: ubuntu-latest
+    needs: terraform
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
       - name: Install Ansible
         run: |
           sudo apt-get update
@@ -53,7 +69,15 @@ jobs:
         run: |
           ansible-playbook -i ansible/inventory ansible/playbook.yml
 
-      # 5️⃣ Setup Helm & kubectl
+  # 4️⃣ Running Helm to deploy the application
+  helm:
+    name: Helm Deployment
+    runs-on: ubuntu-latest
+    needs: ansible
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
       - name: Setup Helm
         uses: azure/setup-helm@v3
         with:
@@ -64,13 +88,11 @@ jobs:
         with:
           version: '1.30.0'
 
-      # 6️⃣ Configure kubeconfig
       - name: Configure kubeconfig
         run: |
-          echo "${{ secrets.KUBECONFIG_CONTENT }}" > kubeconfig
+          echo "${{ env.KUBECONFIG_CONTENT }}" > kubeconfig
           export KUBECONFIG=$(pwd)/kubeconfig
 
-      # 7️⃣ Deploy Helm chart
       - name: Helm upgrade/install
         run: |
           RELEASE_NAME="carlot-app"
@@ -78,12 +100,10 @@ jobs:
           NAMESPACE="default"
           helm upgrade --install $RELEASE_NAME $CHART_PATH --namespace $NAMESPACE --create-namespace
 
-      # 8️⃣ Show Helm release status
       - name: Helm release status
         run: |
           helm status carlot-app --namespace default
 
-      # 9️⃣ Get Load Balancer IP / URL
       - name: Get Load Balancer info
         run: |
           LB_SERVICE=$(kubectl get svc -n default -l app=carlot-app -o jsonpath="{.items[0].status.loadBalancer.ingress[0].ip}")
