--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -95,7 +95,7 @@ jobs:
       - name: Setup kubectl
         uses: azure/setup-kubectl@v3
         with:
-          version: '1.30.0'
+          version: '1.29.6'   # גרסה יציבה לעבודה
 
       - name: Configure kubeconfig
         run: |
