--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -95,7 +95,7 @@ jobs:
       - name: Setup kubectl
         uses: azure/setup-kubectl@v3
         with:
-          version: '1.29.6'   # גרסה יציבה לעבודה
+          version: latest   # עכשיו תמיד יוריד את הגרסה האחרונה הזמינה
 
       - name: Configure kubeconfig
         run: |
@@ -120,4 +120,3 @@ jobs:
             LB_SERVICE=$(kubectl get svc -n default -l app=carlot-app -o jsonpath="{.items[0].status.loadBalancer.ingress[0].hostname}")
           fi
           echo "Load Balancer is accessible at: $LB_SERVICE"
-
