--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -8,7 +8,6 @@ on:
 env:
   DOCKER_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
   DOCKER_PASSWORD: ${{ secrets.DOCKERHUB_TOKEN }}
-  KUBECONFIG_CONTENT: ${{ secrets.KUBECONFIG_CONTENT }}
 
 jobs:
   # 1️⃣ Building and pushing the container to Docker Hub
@@ -47,7 +46,7 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
-          aws-region: us-east-1  # שנה לפי הצורך
+          aws-region: us-east-1
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
@@ -59,6 +58,17 @@ jobs:
           cd terraform
           terraform init
           terraform apply -auto-approve
+
+      # Export kubeconfig (EKS example)
+      - name: Export kubeconfig
+        run: |
+          aws eks update-kubeconfig --name carlot-cluster --region us-east-1
+          mkdir -p $GITHUB_WORKSPACE/kube
+          cp ~/.kube/config $GITHUB_WORKSPACE/kube/config
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
 
   # 3️⃣ Running Ansible to configure the systems
   ansible:
@@ -83,6 +93,8 @@ jobs:
     name: Helm Deployment
     runs-on: ubuntu-latest
     needs: ansible
+    env:
+      KUBECONFIG_CONTENT: ${{ secrets.KUBECONFIG_CONTENT }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -95,12 +107,18 @@ jobs:
       - name: Setup kubectl
         uses: azure/setup-kubectl@v3
         with:
-          version: latest   # עכשיו תמיד יוריד את הגרסה האחרונה הזמינה
+          version: latest
 
+      # Configure kubeconfig
       - name: Configure kubeconfig
         run: |
-          echo "${{ env.KUBECONFIG_CONTENT }}" > kubeconfig
+          cp $GITHUB_WORKSPACE/kube/config ./kubeconfig
           export KUBECONFIG=$(pwd)/kubeconfig
+
+      # Test cluster connectivity
+      - name: Test cluster connectivity
+        run: |
+          kubectl get nodes
 
       - name: Helm upgrade/install
         run: |
