--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -10,7 +10,7 @@ env:
   DOCKER_PASSWORD: ${{ secrets.DOCKERHUB_TOKEN }}
 
 jobs:
-  # 1️⃣ Building and pushing the container to Docker Hub
+  # 1️⃣ Build & Push Docker
   docker:
     name: Build & Push Docker
     runs-on: ubuntu-latest
@@ -30,7 +30,7 @@ jobs:
           docker build -t $IMAGE_NAME ./docker
           docker push $IMAGE_NAME
 
-  # 2️⃣ Running Terraform to provision infrastructure
+  # 2️⃣ Terraform - Provision Infrastructure and EKS Cluster
   terraform:
     name: Terraform Provisioning
     runs-on: ubuntu-latest
@@ -39,7 +39,6 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # Configure AWS credentials
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
@@ -59,9 +58,10 @@ jobs:
           terraform init
           terraform apply -auto-approve
 
-      # Export kubeconfig (EKS example)
+      # Export kubeconfig after cluster creation
       - name: Export kubeconfig
         run: |
+          aws eks describe-cluster --name carlot-cluster --region us-east-1
           aws eks update-kubeconfig --name carlot-cluster --region us-east-1
           mkdir -p $GITHUB_WORKSPACE/kube
           cp ~/.kube/config $GITHUB_WORKSPACE/kube/config
@@ -70,7 +70,7 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
 
-  # 3️⃣ Running Ansible to configure the systems
+  # 3️⃣ Ansible - Configure Systems
   ansible:
     name: Ansible Configuration
     runs-on: ubuntu-latest
@@ -88,13 +88,11 @@ jobs:
         run: |
           ansible-playbook -i ansible/inventory ansible/playbook.yml
 
-  # 4️⃣ Running Helm to deploy the application
+  # 4️⃣ Helm Deployment
   helm:
     name: Helm Deployment
     runs-on: ubuntu-latest
     needs: ansible
-    env:
-      KUBECONFIG_CONTENT: ${{ secrets.KUBECONFIG_CONTENT }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -120,6 +118,7 @@ jobs:
         run: |
           kubectl get nodes
 
+      # Helm upgrade/install
       - name: Helm upgrade/install
         run: |
           RELEASE_NAME="carlot-app"
@@ -127,10 +126,12 @@ jobs:
           NAMESPACE="default"
           helm upgrade --install $RELEASE_NAME $CHART_PATH --namespace $NAMESPACE --create-namespace
 
+      # Helm release status
       - name: Helm release status
         run: |
           helm status carlot-app --namespace default
 
+      # Load Balancer info
       - name: Get Load Balancer info
         run: |
           LB_SERVICE=$(kubectl get svc -n default -l app=carlot-app -o jsonpath="{.items[0].status.loadBalancer.ingress[0].ip}")
