--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -1,165 +1,200 @@
-name: CarLot-Manager CI/CD Pipeline
+---
+- name: Setup Kubernetes Cluster and NFS
+  hosts: all
+  become: yes
+  gather_facts: yes
+  vars:
+    nfs_path: "/srv/nfs/carlot"
+  
+  tasks:
+    - name: Ensure br_netfilter kernel module is loaded
+      shell: |
+        echo br_netfilter | tee /etc/modules-load.d/k8s.conf
+        modprobe br_netfilter || true
+      changed_when: false
+      ignore_errors: yes
 
-on:
-  push:
-    branches:
-      - main
+    - name: Set required sysctl params for Kubernetes
+      shell: |
+        cat > /etc/sysctl.d/k8s.conf <<'EOF'
+        net.bridge.bridge-nf-call-iptables = 1
+        net.bridge.bridge-nf-call-ip6tables = 1
+        net.ipv4.ip_forward = 1
+        EOF
+        sysctl --system
+      changed_when: false
+      ignore_errors: yes
+    - name: Wait for cloud-init to finish
+      command: cloud-init status --wait
+      changed_when: false
+      ignore_errors: yes
 
-env:
-  DOCKER_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-  DOCKER_PASSWORD: ${{ secrets.DOCKERHUB_TOKEN }}
+    - name: Disable swap
+      shell: |
+        swapoff -a
+        sed -i '/ swap / s/^\(.*\)$/#\1/g' /etc/fstab
+      ignore_errors: yes
 
-jobs:
-  # 1️⃣ Build & Push Docker
-  docker:
-    name: Build & Push Docker
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+    - name: Update apt cache
+      apt:
+        update_cache: yes
+        cache_valid_time: 3600
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ env.DOCKER_USERNAME }}
-          password: ${{ env.DOCKER_PASSWORD }}
+    - name: Install Docker and dependencies
+      apt:
+        name:
+          - docker.io
+          - apt-transport-https
+          - curl
+          - nfs-common
+          - gnupg
+        state: present
+      retries: 3
+      delay: 10
 
-      - name: Verify Docker Login
-        run: |
-          echo "Verifying Docker login..."
-          docker info | grep Username || (echo "Docker login failed!" && exit 1)
+    - name: Start and enable Docker
+      systemd:
+        name: docker
+        state: started
+        enabled: yes
 
-      - name: Build Docker image
-        run: |
-          IMAGE_NAME="${{ env.DOCKER_USERNAME }}/carlot-app:latest"
-          docker build -t $IMAGE_NAME ./docker
-          docker push $IMAGE_NAME
+    - name: Configure containerd
+      shell: |
+        mkdir -p /etc/containerd
+        containerd config default | tee /etc/containerd/config.toml
+        sed -i 's/SystemdCgroup = false/SystemdCgroup = true/g' /etc/containerd/config.toml
+        systemctl restart containerd
+      retries: 3
+      delay: 5
 
-  # 2️⃣ Terraform - Provision Infrastructure (VMs only)
-  terraform:
-    name: Terraform Provisioning
-    runs-on: ubuntu-latest
-    needs: docker
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+    - name: Pull Docker image
+      shell: docker pull azexkush/car-lot-manager:latest
+      register: docker_pull
+      retries: 3
+      delay: 10
+      ignore_errors: yes
 
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v2
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
-          aws-region: us-east-1
+    - name: Create directory for Kubernetes GPG key
+      file:
+        path: /etc/apt/keyrings
+        state: directory
+        mode: '0755'
 
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v2
-        with:
-          terraform_version: 1.6.0
+    - name: Install Kubernetes tools
+      shell: |
+        curl -fsSL https://pkgs.k8s.io/core:/stable:/v1.29/deb/Release.key | gpg --dearmor -o /etc/apt/keyrings/kubernetes-apt-keyring.gpg
+        echo 'deb [signed-by=/etc/apt/keyrings/kubernetes-apt-keyring.gpg] https://pkgs.k8s.io/core:/stable:/v1.29/deb/ /' | tee /etc/apt/sources.list.d/kubernetes.list
+        apt-get update
+        apt-get install -y kubelet kubeadm kubectl
+        apt-mark hold kubelet kubeadm kubectl
+      retries: 3
+      delay: 10
 
-      - name: Terraform Init & Apply
-        run: |
-          cd terraform
-          terraform init
-          terraform apply -auto-approve
+    - name: Setup NFS Server (Master only)
+      when: "'master' in group_names"
+      block:
+        - name: Install NFS Kernel Server
+          apt:
+            name: nfs-kernel-server
+            state: present
 
-  # 3️⃣ Ansible - Setup Kubernetes Cluster
-  ansible:
-    name: Ansible Cluster Setup
-    runs-on: ubuntu-latest
-    needs: terraform
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+        - name: Create NFS directory
+          file:
+            path: "{{ nfs_path }}"
+            state: directory
+            mode: '0777'
 
-      - name: Install Ansible
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y ansible sshpass python3-pip
+        - name: Configure exports
+          lineinfile:
+            path: /etc/exports
+            line: "{{ nfs_path }} *(rw,sync,no_subtree_check,no_root_squash)"
+            create: yes
 
-      - name: Generate Inventory (Python script)
-        run: |
-          python3 ansible/generate_inventory.py <MASTER_IP> <WORKER_IPS>
+        - name: Export NFS shares
+          command: exportfs -ra
 
-      - name: Run Ansible Playbook
-        run: |
-          ansible-playbook -i ansible/inventory.ini ansible/playbook.yml
+        - name: Restart NFS
+          systemd:
+            name: nfs-kernel-server
+            state: restarted
+            enabled: yes
 
-      - name: Copy kubeconfig for CI
-        run: |
-          cp /home/ubuntu/.kube/config $GITHUB_WORKSPACE/kubeconfig
-          chmod 644 $GITHUB_WORKSPACE/kubeconfig
+    - name: Initialize Kubernetes Master
+      when: "'master' in group_names"
+      shell: |
+        kubeadm reset -f
+        # Initialize with both private and public IP in cert SANs
+        kubeadm init --pod-network-cidr=10.244.0.0/16 \
+          --apiserver-cert-extra-sans={{ ansible_default_ipv4.address }},{{ ansible_ssh_host }} \
+          --ignore-preflight-errors=NumCPU,FileContent--proc-sys-net-bridge-bridge-nf-call-iptables
+        mkdir -p /home/ubuntu/.kube
+        cp -f /etc/kubernetes/admin.conf /home/ubuntu/.kube/config
+        chown ubuntu:ubuntu /home/ubuntu/.kube/config
+      register: kubeadm_init
+      retries: 2
+      delay: 10
 
-      - name: Wait for Kubernetes cluster to be ready
-        run: |
-          export KUBECONFIG=$GITHUB_WORKSPACE/kubeconfig
-          echo "Waiting for all nodes to be Ready..."
-          retries=0
-          until kubectl get nodes --no-headers | awk '{print $2}' | grep -vq "NotReady"; do
-            if [ $retries -ge 20 ]; then
-              echo "Cluster nodes not ready after 200 seconds"
-              exit 1
-            fi
-            echo "Cluster not ready yet, sleeping 10 seconds..."
-            sleep 10
-            retries=$((retries+1))
-          done
-          echo "All nodes are Ready!"
+    - name: Install Flannel CNI (Master only)
+      when: "'master' in group_names"
+      become_user: ubuntu
+      shell: |
+        kubectl apply -f https://raw.githubusercontent.com/coreos/flannel/master/Documentation/kube-flannel.yml
+      environment:
+        KUBECONFIG: /home/ubuntu/.kube/config
+      retries: 3
+      delay: 10
 
-  # 4️⃣ Helm Deployment + Load Balancer Info
-  helm:
-    name: Helm Deployment
-    runs-on: ubuntu-latest
-    needs: ansible
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+    - name: Wait for Kubernetes API to be ready (Master only)
+      when: "'master' in group_names"
+      become_user: ubuntu
+      command: kubectl get nodes
+      environment:
+        KUBECONFIG: /home/ubuntu/.kube/config
+      register: kubectl_get_nodes
+      until: kubectl_get_nodes.rc == 0
+      retries: 10
+      delay: 10
 
-      - name: Setup Helm
-        uses: azure/setup-helm@v3
-        with:
-          version: v3.12.0
+    - name: Ensure kubeadm token exists and get join command (Master only)
+      when: "'master' in group_names"
+      become: yes
+      shell: |
+        set -e
+        # Try to create token if none exists
+        kubeadm token list || true
+        if ! kubeadm token list | awk 'NR>1{print $1}' | grep -qE '^[a-z0-9]'; then
+          kubeadm token create --ttl 30m >/dev/null
+        fi
+        kubeadm token create --print-join-command
+      register: join_command_raw
+      retries: 3
+      delay: 5
 
-      - name: Setup kubectl
-        uses: azure/setup-kubectl@v3
-        with:
-          version: latest
+    - name: Save join command to file (Master only)
+      when: "'master' in group_names"
+      copy:
+        content: "{{ join_command_raw.stdout }}"
+        dest: /tmp/join_command.txt
+        mode: '0644'
 
-      - name: Configure kubeconfig
-        run: |
-          export KUBECONFIG=$GITHUB_WORKSPACE/kubeconfig
-          kubectl get nodes
+    - name: Fetch join command from master
+      when: "'master' in group_names"
+      fetch:
+        src: /tmp/join_command.txt
+        dest: /tmp/join_command.txt
+        flat: yes
+      run_once: true
 
-      - name: Helm upgrade/install
-        run: |
-          RELEASE_NAME="carlot-app"
-          CHART_PATH="./helm/car-lot"
-          NAMESPACE="default"
-          helm upgrade --install $RELEASE_NAME $CHART_PATH --namespace $NAMESPACE --create-namespace
+    - name: Read join command
+      when: "'worker' in group_names"
+      set_fact:
+        cluster_join_command: "{{ lookup('file', '/tmp/join_command.txt') }}"
+      delegate_to: localhost
 
-      - name: Helm release status
-        run: |
-          helm status carlot-app --namespace default
-
-      - name: Get Load Balancer info
-        id: lb_info
-        run: |
-          export KUBECONFIG=$GITHUB_WORKSPACE/kubeconfig
-          LB_SERVICE=$(kubectl get svc -n default -l app=carlot-app -o jsonpath="{.items[0].status.loadBalancer.ingress[0].ip}")
-          if [ -z "$LB_SERVICE" ]; then
-            LB_SERVICE=$(kubectl get svc -n default -l app=carlot-app -o jsonpath="{.items[0].status.loadBalancer.ingress[0].hostname}")
-          fi
-          echo "Load Balancer: $LB_SERVICE"
-          echo "lb_url=http://$LB_SERVICE" >> $GITHUB_OUTPUT
-
-      - name: Display clickable link
-        run: |
-          echo "Access your CarLot app here: ${{ steps.lb_info.outputs.lb_url }}"
-
-      - name: Resolve Public IP of ALB
-        run: |
-          LB_HOST=$(echo "${{ steps.lb_info.outputs.lb_url }}" | sed 's|http://||')
-          PUBLIC_IP=$(dig +short $LB_HOST)
-          echo "Public IP of the Load Balancer: $PUBLIC_IP"
-
-
+    - name: Join Workers to Cluster
+      when: "'worker' in group_names"
+      shell: |
+        kubeadm reset -f
+        {{ cluster_join_command }} --ignore-preflight-errors=NumCPU
+      retries: 3
+      delay: 10
