--- a/helm/car-lot/templates/service.yaml
+++ b/helm/car-lot/templates/service.yaml
@@ -1,14 +1,18 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "carlot-app.fullname" . }}
+  name: {{ include "car-lot.fullname" . }}
   labels:
-    app: {{ include "carlot-app.name" . }}
+    app: carlot-app
+    {{- include "car-lot.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   selector:
-    app: {{ include "carlot-app.name" . }}
+    app: carlot-app
+    {{- include "car-lot.selectorLabels" . | nindent 4 }}
   ports:
     - port: {{ .Values.service.port }}
       targetPort: {{ .Values.service.port }}
+      nodePort: {{ .Values.service.nodePort }}
       protocol: TCP
+      name: http
