Fix end-to-end pipeline configuration
- Fix inventory generation to write to correct path
- Update Docker image name in Ansible playbook
- Change health checks to TCP for Streamlit compatibility
- Update ALB health check path to root
- Add deployment verification documentation

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -68,7 +68,7 @@
       delay: 5
 
     - name: Pull Docker image
-      shell: docker pull azexkush/car-lot-manager:latest
+      shell: docker pull azexkush/carlot-app:latest
       register: docker_pull
       retries: 3
       delay: 10
